k3s/scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      imagePullSecrets:
      - name: registry-secret
      containers:
      - name: scheduler
        image: ctaihsnl/cloudfinal-backend:1.2.2
        imagePullPolicy: IfNotPresent
        command: ["python", "-m", "app.services.scheduler_loop"]
        livenessProbe:
          exec:
            command: ["python", "-c", "import os; os.kill(1, 0)"]
          initialDelaySeconds: 10
          periodSeconds: 30
          failureThreshold: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      imagePullSecrets:
      - name: registry-secret
      containers:
      - name: worker
        image: ctaihsnl/cloudfinal-backend:1.2.2
        imagePullPolicy: IfNotPresent
        command: ["python", "-m", "app.services.worker_loop"]
        livenessProbe:
          exec:
            command: ["python", "-c", "import os; os.kill(1, 0)"]
          initialDelaySeconds: 10
          periodSeconds: 30
          failureThreshold: 3
