k3s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
      - name: registry-secret
      containers:
      - name: frontend
        image: registry.git.hsnl.tw/native_cloud/distributed_job_scheduler/frontend:1.1.1
        imagePullPolicy: IfNotPresent
        command: ["sh", "-c", "python3 manage.py migrate && gunicorn scheduler_frontend.wsgi:application --bind 0.0.0.0:8000"]
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30081
